test/bad/functions/type06.px

func f(y: Int = 0) def
    return

g = f
g()
